# Kepler

./: .gitignore  .gitmodules  .prettierrc.yml  .rusty-hook.toml  CNAME  Cargo.toml  LICENSE  OPEN_SOURCE_CREDITS.md  README.md  package-lock.json  package.json
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: main.workflow  rust.yml
Core/: binding.gyp  package-lock.json  package.json
Core/lib/: binding.js
Core/src/: kepler_core.cc
Core/test/: binding.test.js
Display/: binding.gyp  package-lock.json  package.json
Display/lib/: binding.js
Display/src/: glad.c  kepler_display.cc
Display/test/: binding.test.js
Display/test-desktop/: window.js
Editor/: package-lock.json  package.json
Editor/public/: index.html
Editor/src/: index.css  index.js
Entities/: binding.gyp  package-lock.json  package.json
Entities/src/: kepler_entities.cc
Entities/test/: binding.test.js
Framework/: CMakeLists.txt
Framework/CMake/: Messaging.cmake
Framework/Include/Kepler/: EntityX.h
Framework/Include/Kepler/Math/: Number.h
Framework/Source/Math/: Number.cpp
Press/: logo.xcf  logo_cad.xcf
StandardDist/: CMakeLists.txt  main.cpp
docs/: CNAME  _config.yml  ecosystem.md  faq.md  index.md  license.md  sphere_tracing.md
docs/_includes/: header_link.html  source_link.html  source_loc.html
docs/_layouts/: default.html
docs/_site/: ecosystem.html  faq.html  index.html  index.md  license.html  sphere_tracing.html
docs/actor/: index.md
docs/core/: index.md
docs/display/: Display.md  Shader.md  index.md
docs/fractal/: index.md
docs/tutorials/: getting_started.md  hacking.md  index.md  multiplayer.md  nopoly_meshes.md
editor/: .eslintrc  .npmrc  editor.html  index.html  main.js  package-lock.json  package.json
editor/css/: main.css  nodes.css
editor/default_assets/: luaprint.json  material.json  script.json
editor/js/: AngelScriptMode.js  CodePluginGLSL.js  CodePluginLogical.js  editor.js  nodeTemplate.pug
editor/langspec/: js.txt  lua.txt
editor/windows/: luaactor_editor.html  luaprint_editor.html  luaprint_editor.js  material_editor.html  material_editor.js  new_editor.html  new_editor.js  script_editor.html  script_editor.js
framework/: CMakeLists.txt  build.sh  config.example.cmake
framework/Engine/: Artemis.h  DesktopApplication.cpp  DesktopApplication.h  Game.cpp  Game.h  GameOnly.h  LibOnly.h  Lua.h  TinyObjLoader.h
framework/Engine/AngelScript/add_on/autowrapper/generator/: generateheader.cpp
framework/Engine/AngelScript/add_on/scriptbuilder/: scriptbuilder.h
framework/Engine/Artemis/: Artemis.h  Component.cpp  Component.h  ComponentMapper.h  ComponentType.cpp  ComponentType.h  ComponentTypeManager.cpp  ComponentTypeManager.h  DelayedEntityProcessingSystem.cpp  DelayedEntityProcessingSystem.h  DelayedEntitySystem.cpp  DelayedEntitySystem.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityProcessingSystem.cpp  EntityProcessingSystem.h  EntitySystem.cpp  EntitySystem.h  GroupManager.cpp  GroupManager.h  ImmutableBag.h  SystemBitManager.cpp  SystemBitManager.h  SystemManager.cpp  SystemManager.h  TagManager.cpp  TagManager.h  TickedEntityProcessingSystem.cpp  TickedEntityProcessingSystem.h  World.cpp  World.h
framework/Engine/Glad/include/glad/: glad.h
framework/Engine/Glad/src/: glad.c
framework/Engine/Input/: KeyValues.h  KeyValuesUnix.h  KeyValuesWindows.h  Keys.h
framework/Engine/Lua/Bindings/: Lua.h  LuaScript.cpp  LuaScript.h
framework/Engine/Lua/Sources/: lua.c  luac.c
framework/Engine/Rendering/: RenderAPI.h  RenderSystem.h  Shader.h  Window.cpp  Window.h  WindowBase.h
framework/Engine/Rendering/Debug/: Debug.h
framework/Engine/Rendering/GLFW3/: Input.cpp  SetupMesh.cpp  Shader.cpp  ShaderData.h  Window.cpp  Window.h  glfw3.h
framework/Engine/Rendering/OpenGL/: Debug.cpp  Debug.h  Render.cpp  Setup.cpp  SetupMesh.cpp  Shader.cpp  ShaderData.h
framework/Engine/Rendering/Server/: Window.cpp
framework/Engine/Rendering/Vulkan/: VulkanAPI.h
framework/Engine/Systems/: ActorSystem.cpp  ActorSystem.h  DebugSystem.cpp  DebugSystem.h  RenderSystem.h
framework/Engine/Tools/: FS.cpp  FS.h  String.h
framework/Engine/Util/: Debug.h  Promise.cpp  Promise.h
framework/Engine/Vulkan/: Instancer.cpp
framework/Engine/World/: Actor.cpp  Actor.h  AngelActor.cpp  AngelActor.h  Camera.cpp  Camera.h  Level.h
framework/Engine/World/Actors/: LuaActor.cpp  LuaActor.h
framework/Engine/World/Components/: ActorComponent.h
framework/Engine/World/Components/Physics/: PositionComponent.h  RotationComponent.h  VelocityComponent.h
framework/Engine/World/Components/Rendering/: MeshComponent.h  Sprite2DComponent.h
framework/Engine/World/Particles/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
framework/Engine/World/Rendering/: Mesh.cpp  Mesh.h  Texture.h  Vertex.cpp  Vertex.h
framework/Math/Conversions/: Conversions.h
framework/Math/Generic/: Conversions.cpp  Conversions.h
framework/Math/Geometry/: Poly3d.cpp  Poly3d.h  Quad3d.cpp  Quad3d.h
framework/Math/Matrices/: Mat4.cpp  Mat4.h
framework/Math/Vectors/: Mat4.cpp  Mat4.h  Quaternion.cpp  Quaternion.h  QuaternionRotation.cpp  Test.cpp  Test.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
framework/Memory/: Pool.cpp  Pool.h
framework/Rendering/: Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
framework/Rendering/MeshTypes/: MeshObj.cpp  MeshObj.h
framework/World/: Actor.cpp  Actor.h  Component.cpp  Component.h  Level.h
framework/World/Actors/: Level.h
framework/World/Components/: MeshComponent.h
framework/math/vectors/: Vec2.rs  Vec3.rs
kepler-glfw/: binding.Makefile  kepler-glfw-native.target.mk
project_base/: .gitignore  kepler.json
project_base/Shaders/: parallax_test.frag.glsl  parallax_test.vert.glsl
project_base/shaders/: parallax_test.frag.glsl  parallax_test.shader.json
src/: main.rs
src/data/: frag.spv  quad.frag
test/: CMakeLists.txt  MyLevel.h  TestActor.h  UnitTest.h  main.cpp  mocha.opts  shader.frag.glsl  test.js
test/UnitTests/: Promise.cpp  Quaternion.cpp
(+129 files in other folders)
